[gd_scene load_steps=8 format=3 uid="uid://c5nsievgx86hr"]

[ext_resource type="Script" uid="uid://bcrc83mqhjhv3" path="res://ui/hud/hud.gd" id="1_xmswo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xmswo"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4d6w6"]
bg_color = Color(0.933333, 0.0941176, 0.129412, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0nub"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w75iv"]
bg_color = Color(0.835294, 0.376471, 0.113725, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_imuuq"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kwc50"]
bg_color = Color(0.207616, 0.530391, 0.772434, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_xmswo")

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.012
anchor_right = 0.229
anchor_bottom = 0.049
offset_left = -0.0640001
offset_top = 0.224
offset_right = 0.191986
offset_bottom = 0.247999
theme_override_styles/background = SubResource("StyleBoxFlat_xmswo")
theme_override_styles/fill = SubResource("StyleBoxFlat_4d6w6")
value = 50.0
show_percentage = false

[node name="HungerBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.074
anchor_right = 0.229
anchor_bottom = 0.111
offset_left = -0.0640001
offset_top = 0.0480003
offset_right = 0.191986
offset_bottom = 0.071991
theme_override_styles/background = SubResource("StyleBoxFlat_e0nub")
theme_override_styles/fill = SubResource("StyleBoxFlat_w75iv")
value = 50.0
show_percentage = false

[node name="ThirstBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.136
anchor_right = 0.229
anchor_bottom = 0.173
offset_left = -0.0640001
offset_top = -0.128006
offset_right = 0.191986
offset_bottom = -0.104004
theme_override_styles/background = SubResource("StyleBoxFlat_imuuq")
theme_override_styles/fill = SubResource("StyleBoxFlat_kwc50")
value = 50.0
show_percentage = false
